--- a/src/components/Skills/style.scss
+++ b/src/components/Skills/style.scss
@@ -5,7 +5,7 @@ $secondary: #2f2f2f;
   display: flex;
   min-width: 400px;
   margin: 0 auto;
-  justify-content: space-evenly;
+  justify-content: center;
   font-size: 6rem;
   flex-wrap: wrap;
 
