--- a/src/App.scss
+++ b/src/App.scss
@@ -1,55 +1,22 @@
 $secondary: #2f2f2f;
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .social-icons-wrapper {
   display: flex;
   max-width: 850px;
   margin: 0 auto;
-  justify-content: space-evenly;
-  font-size: 5.5rem;
-  flex-wrap: no-wrap;
+  justify-content: center;
+  font-size: 4.5rem;
+  flex-wrap: nowrap;
+
+  @media screen and (max-width: 640px) and (min-width: 360px) {
+    flex-wrap: wrap;
+    font-size: 4.2rem;
+    margin-top: -65px;
+  }
 
   .icon {
-    margin: 0 5px;
-
+    margin-left: 10px;
+    
     color: $secondary;
 
     &:hover {
