--- a/src/components/Project/style.scss
+++ b/src/components/Project/style.scss
@@ -1,25 +1,37 @@
-.wrapper {
-  display: inline-flex;
+.item-wrapper {
+  position: relative;
+  display: flex;
   flex-direction: column;
-  max-width: 900px;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
-  margin: 0 50px;
+
+  @media screen and (max-width: 640px) and (min-width: 360px) {
+  }
 
   .title {
     text-transform: uppercase;
     font-size: 1.5rem;
     font-weight: bold;
+
+    @media screen and (max-width: 640px) and (min-width: 360px) {
+      font-size: 0.9rem;
+    }
   }
 
   .thumbnail {
-    width: 500px;
-    flex-grow: 0;
     box-shadow: 1px 1px 6px #eee;
     transition: ease-in-out 300ms;
+    max-width: 550px;
+    margin: 0 25px;
+
+    @media screen and (max-width: 640px) and (min-width: 360px) {
+      max-width: 325px;
+    }
 
     &:hover {
       transform: scale(1.05);
     }
   }
+
 }
