--- a/src/components/Section/style.scss
+++ b/src/components/Section/style.scss
@@ -15,9 +15,9 @@ $secondary: #2f2f2f;
     max-width: 900px;
     font-size: 2.5rem;
 
-    @media screen and (max-width: 640px) and (min-width: 360px) {
+    @media screen and (max-width: 640px) and (min-width: 320px) {
       margin-top: 25px;
-      font-size: 2.4rem;
+      font-size: 1.4rem;
       text-align: center;
     }
   }
@@ -33,17 +33,21 @@ $secondary: #2f2f2f;
   }
 
   .text {
-    text-align: justify;
+    text-align: center;
     font-size: 1.7rem;
     max-width: 850px;
     color: $secondary;
+
+    @media screen and (max-width: 640px) and (min-width: 320px) {
+      font-size: 1.2rem;
+    }
   }
 
   .mail {
     margin-top: -50px;
     font-size: 1.9rem;
 
-    @media screen and (max-width: 640px) and (min-width: 360px) {
+    @media screen and (max-width: 640px) and (min-width: 320px) {
       font-size: 1.6rem;
       margin-top: -50px;
     }
