added malito to mail

--- a/src/components/Section/style.scss
+++ b/src/components/Section/style.scss
@@ -47,6 +47,10 @@ $secondary: #2f2f2f;
     margin-top: -50px;
     font-size: 1.9rem;
 
+    &:link,:visited {
+      text-decoration: none;
+      color: $secondary;
+    }
     @media screen and (max-width: 640px) and (min-width: 320px) {
       font-size: 1.6rem;
       margin-top: -50px;
