--- a/src/components/Section/style.scss
+++ b/src/components/Section/style.scss
@@ -39,7 +39,9 @@ $secondary: #2f2f2f;
     color: $secondary;
 
     @media screen and (max-width: 640px) and (min-width: 320px) {
-      font-size: 1.2rem;
+      font-size: 0.95rem;
+      padding: 0 20px;
+      
     }
   }
 
@@ -52,7 +54,7 @@ $secondary: #2f2f2f;
       color: $secondary;
     }
     @media screen and (max-width: 640px) and (min-width: 320px) {
-      font-size: 1.6rem;
+      font-size: 1.2rem;
       margin-top: -50px;
     }
   }
