added github links to projects

--- a/src/components/Project/style.scss
+++ b/src/components/Project/style.scss
@@ -16,6 +16,10 @@
     }
   }
 
+  .github-link {
+    margin-top: -30px;
+  }
+
   .thumbnail {
     box-shadow: 1px 1px 6px #eee;
     transition: ease-in-out 300ms;
