--- a/src/components/Section/style.scss
+++ b/src/components/Section/style.scss
@@ -41,7 +41,6 @@ $secondary: #2f2f2f;
     @media screen and (max-width: 640px) and (min-width: 320px) {
       font-size: 0.95rem;
       padding: 0 20px;
-      
     }
   }
 
@@ -49,7 +48,8 @@ $secondary: #2f2f2f;
     margin-top: -50px;
     font-size: 1.9rem;
 
-    &:link,:visited {
+    &:link,
+    :visited {
       text-decoration: none;
       color: $secondary;
     }
