--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,10 @@ code {
     monospace;
 }
 
-
 a {
-  text-decoration: none
+  text-decoration: none;
+  color: #2f2f2f;
 }
-
 
 a:visited,
 :active {
