--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,7 @@ $secondary: #2f2f2f;
   @media screen and (max-width: 640px) and (min-width: 320px) {
     flex-wrap: wrap;
     font-size: 3.2rem;
+    margin-top: -60px;
   }
 
   .icon {
